# ChangeLog for dev-perl/IO-Tty
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-Tty/ChangeLog,v 1.39 2011/03/30 16:42:59 jer Exp $

  30 Mar 2011; Jeroen Roovers <jer@gentoo.org> IO-Tty-1.10.ebuild:
  Marked ~hppa (bug #361155).

  14 Jan 2011; Torsten Veller <tove@gentoo.org> -IO-Tty-1.09.ebuild:
  Cleanup

*IO-Tty-1.10 (15 Oct 2010)

  15 Oct 2010; Torsten Veller <tove@gentoo.org> +IO-Tty-1.10.ebuild:
  Version bump

*IO-Tty-1.09 (05 Oct 2010)

  05 Oct 2010; Torsten Veller <tove@gentoo.org> +IO-Tty-1.09.ebuild:
  Version bump

  15 Aug 2010; Torsten Veller <tove@gentoo.org> -IO-Tty-1.07.ebuild:
  Cleanup

  27 Jun 2010; <nixnut@gentoo.org> IO-Tty-1.08.ebuild:
  ppc stable #323529

  08 May 2010; Raúl Porcel <armin76@gentoo.org> IO-Tty-1.08.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #314467

  18 Apr 2010; Markus Meier <maekke@gentoo.org> IO-Tty-1.08.ebuild:
  arm stable, bug #314467

  17 Apr 2010; Torsten Veller <tove@gentoo.org> IO-Tty-1.08.ebuild:
  Stable on amd64, x86 (#314467)

  10 Jan 2010; Fabian Groffen <grobian@gentoo.org> IO-Tty-1.08.ebuild:
  Transfer Prefix keywords

*IO-Tty-1.08 (25 Feb 2009)

  25 Feb 2009; Torsten Veller <tove@gentoo.org> +IO-Tty-1.08.ebuild:
  Version bump

  10 Sep 2008; Torsten Veller <tove@gentoo.org> -IO-Tty-1.02-r1.ebuild,
  -IO-Tty-1.05.ebuild, IO-Tty-1.07.ebuild:
  Remove mymake="/usr". Cleanup

  03 Jan 2008; Brent Baude <ranger@gentoo.org> IO-Tty-1.07.ebuild:
  Marking IO-Tty-1.07 ~ppc64 for bug 204036

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> IO-Tty-1.07.ebuild:
  Stable on x86, bug #169152.

  24 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org> IO-Tty-1.07.ebuild:
  Stable on ppc.

  21 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org> ChangeLog:
  ppc stable

  20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> IO-Tty-1.07.ebuild:
  Stable on Alpha.

  09 Oct 2006; Michael Cummings <mcummings@gentoo.org> -IO-Tty-0.04.ebuild,