@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/IPC-Run
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/IPC-Run/ChangeLog,v 1.33 2011/07/06 13:22:37 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/IPC-Run/ChangeLog,v 1.34 2011/07/22 14:06:58 jer Exp $
+
+  22 Jul 2011; Jeroen Roovers <jer@gentoo.org> IPC-Run-0.89.ebuild:
+  Stable for HPPA (bug #372773).
 
 *IPC-Run-0.900.0 (06 Jul 2011)
 
