@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/IO-Tty
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-Tty/ChangeLog,v 1.39 2011/03/30 16:42:59 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-Tty/ChangeLog,v 1.40 2011/07/22 14:06:01 jer Exp $
+
+  22 Jul 2011; Jeroen Roovers <jer@gentoo.org> IO-Tty-1.10.ebuild:
+  Stable for HPPA (bug #372773).
 
   30 Mar 2011; Jeroen Roovers <jer@gentoo.org> IO-Tty-1.10.ebuild:
   Marked ~hppa (bug #361155).
